@@ -1,6 +1,6 @@
 FROM maven:3.5-jdk-9-slim as build
 
-# install build dependencies
+# Install build dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
 		git \
 	&& rm -rf /var/lib/apt/lists/*
@@ -10,30 +10,43 @@ WORKDIR /iri
 RUN git clone -b master https://github.com/iotaledger/iri.git /iri/
 RUN mvn clean package
 
-# execution image
+#
+# Execution image
+#
 FROM openjdk:8-jre-slim
 
 COPY --from=build /iri/target/iri*.jar /iri/target/
 COPY conf/* /iri/conf/
 COPY docker-entrypoint.sh /
 
+# Default java memory settings
 ENV MIN_MEMORY 2G
 ENV MAX_MEMORY 4G
 
+# Allow change of ports in the container.
+# See Issue #2 for description why this is needed (https://github.com/bluedigits/iota-node/issues/2)
 ENV API_PORT 14265
 ENV UDP_PORT 14600
 ENV TCP_PORT 15600
 
-# default remote api limitations
+# Default jvm arguments
+ENV JAVA_OPTIONS "-XX:+DisableAttachMechanism -XX:+HeapDumpOnOutOfMemoryError"
+# Example to make java use docker's memory limits to change its own memory configuration
+# (https://blogs.oracle.com/java-platform-group/java-se-support-for-docker-cpu-and-memory-limits)
+#
+# ENV JAVA_OPTIONS "-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap"
+
+# Default remote api limitations
 ENV REMOTE_API_LIMIT "attachToTangle, addNeighbors, removeNeighbors"
 
-# mark ports for expose
+# Mark ports for expose
 EXPOSE $API_PORT
 EXPOSE $UDP_PORT/UDP
 EXPOSE $TCP_PORT
 
 WORKDIR /iri/data
 
+# Define volumes
 VOLUME /iri/data
 VOLUME /iri/conf
 
